--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,8 @@
 		<db.password>postgres</db.password>
 
 		<es.hosts>${project.build.directory}/es-colplus</es.hosts>
+		<es.ports></es.ports>
+
 	</properties>
 
 	<licenses>
