--- a/colplus-admin/src/test/resources/config-test.yaml
+++ b/colplus-admin/src/test/resources/config-test.yaml
@@ -34,3 +34,6 @@ es:
   ports: 9200
   nameUsage:
     modelClass: org.col.es.model.EsNameUsage
+auth:
+  signingKey: 3254e6rftgbzg6tz7
+  gbifSecret: 123456789
