--- a/colplus-ws/src/test/resources/config-test.yaml
+++ b/colplus-ws/src/test/resources/config-test.yaml
@@ -17,3 +17,8 @@ db:
   database: ${db.database}
   user: ${db.user}
   password: ${db.password}
+auth:
+  gbifApi: ${gbif.api}
+  gbifAppkey: ${gbif.appkey}
+  gbifSecret: ${gbif.secret}
+  signingKey: 3254e6rftgbzg6tz7
