--- a/colplus-admin/src/main/resources/config.yaml
+++ b/colplus-admin/src/main/resources/config.yaml
@@ -23,8 +23,10 @@ client:
   keepAlive: 0ms
   retries: 1
 auth:
+  gbifApi: ${gbif.api}
+  gbifAppkey: ${gbif.appkey}
+  gbifSecret: ${gbif.secret}
   signingKey: 3254e6rftgbzg6tz7
-  gbifSecret: 123456789
 es:
   # comma-separated strings of hosts and ports (numbers must match)
   hosts: ${es.hosts}
