--- a/colplus-admin/src/test/resources/config-test.yaml
+++ b/colplus-admin/src/test/resources/config-test.yaml
@@ -35,7 +35,7 @@ es:
   nameUsage:
     modelClass: org.col.es.model.EsNameUsage
 auth:
-  gbifApi: ${gbif.api}
+  gbifApi: "${gbif.api}"
   gbifAppkey: ${gbif.appkey}
-  gbifSecret: ${gbif.secret}
+  gbifSecret: "${gbif.secret}"
   signingKey: 3254e6rftgbzg6tz7
