--- a/colplus-dao/pom.xml
+++ b/colplus-dao/pom.xml
@@ -54,6 +54,10 @@
 
 		<!-- other -->
 		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
