--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
 		<maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
 		<maven-shade-plugin.version>3.0.0</maven-shade-plugin.version>
 		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-		<maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
+		<maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
 		<versions-maven-plugin.version>2.4</versions-maven-plugin.version>
 		<embedded-elasticsearch.version>2.7.0</embedded-elasticsearch.version>
 
@@ -695,6 +695,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
 					<configuration>
+						<useSystemClassLoader>false</useSystemClassLoader>
 						<!-- Use a new forked process for each test See https://maven.apache.org/surefire/maven-surefire-plugin/examples/fork-options-and-parallel-execution.html -->
 						<forkCount>1</forkCount>
 						<reuseForks>false</reuseForks>
