Add github token auth for downloading private repos

--- a/colplus-common/pom.xml
+++ b/colplus-common/pom.xml
@@ -114,6 +114,16 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jul-to-slf4j</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.javers</groupId>
       <artifactId>javers-core</artifactId>
       <scope>test</scope>
