Make cors configs public

--- a/colplus-ws/src/main/resources/config.yaml
+++ b/colplus-ws/src/main/resources/config.yaml
@@ -29,3 +29,5 @@ es:
     batchSize: 1000
 img:
   repo: ${img.repo}
+cors:
+  headers: "Authorization, Content-Type, Accept-Language, X-Requested-With"
