Disable isnull search test for now, see #202

--- a/colplus-dao/src/test/resources/es-test.yaml
+++ b/colplus-dao/src/test/resources/es-test.yaml
@@ -1,7 +1,5 @@
-# Comma-separated string of hosts
 hosts: ${es.hosts}
-# Comma-separated string of ports (defaults to 9200)
-ports:
+ports: ${es.ports}
 nameUsage:
   modelClass: org.col.es.model.EsNameUsage
   numShards: 1
