--- a/pom.xml
+++ b/pom.xml
@@ -616,6 +616,7 @@
 						<forkCount>1</forkCount>
 						<reuseForks>false</reuseForks>
 						<redirectTestOutputToFile>true</redirectTestOutputToFile>
+						<argLine>-Xmx1024m -Xms1024m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
 						<!-- use default JVM settings <argLine>-Xms128m</argLine> -->
 						<runOrder>random</runOrder>
 					</configuration>
