--- a/pom.xml
+++ b/pom.xml
@@ -616,8 +616,10 @@
 						<forkCount>1</forkCount>
 						<reuseForks>false</reuseForks>
 						<redirectTestOutputToFile>true</redirectTestOutputToFile>
-						<argLine>-Xmx1024m -Xms1024m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
-						<!-- use default JVM settings <argLine>-Xms128m</argLine> -->
+						<!-- mem settings may not be necessary but the 3rd arg is. See here: -->
+						<!-- https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
+						<!-- And here: https://talk.openmrs.org/t/error-could-not-find-or-load-main-class-org-apache-maven-surefire-booter-forkedbooter/20509 -->
+						<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
 						<runOrder>random</runOrder>
 					</configuration>
 				</plugin>
