--- a/colplus-dw-testing/src/test/resources/config-test.yaml
+++ b/colplus-dw-testing/src/test/resources/config-test.yaml
@@ -18,9 +18,17 @@ db:
   user: ${db.user}
   password: ${db.password}
 auth:
-  gbifApi: "${gbif.api}"
-  gbifAppkey: ${gbif.appkey}
-  gbifSecret: "${gbif.secret}"
-  signingKey: 3254e6rftgbzg6tz7
+  type: map
+  users:
+    - username: user
+      password: 1234
+      role:
+    - username: editor
+      password: 123456
+      role: EDITOR
+    - username: admin
+      password: 12345678
+      role: ADMIN
+jwtKey: 3254e6rftgbzg6tz7
 img:
   repo: ${img.repo}
