--- a/colplus-dw/src/test/resources/config-test.yaml
+++ b/colplus-dw/src/test/resources/config-test.yaml
@@ -12,27 +12,16 @@ logging:
   appenders:
     - type: console
 db:
-  host: ${db.host}
+  host: "${db.host}"
   port: 5432
   database: ${db.database}
   user: ${db.user}
   password: ${db.password}
 auth:
-  type: map
-  users:
-    - username: user
-      password: 1234
-      role:
-    - username: editor
-      password: 123456
-      role: EDITOR
-    - username: admin
-      password: 12345678
-      role: ADMIN
-  # type: gbif
-  # api: "${gbif.api}"
-  # appkey: ${gbif.appkey}
-  # secret: "${gbif.secret}"
+  type: gbif
+  api: "${gbif.api}"
+  appkey: ${gbif.appkey}
+  secret: "${gbif.secret}"
 jwtKey: 3254e6rftgbzg6tz7
 img:
   repo: ${img.repo}
