--- a/colplus-ws/src/main/resources/config.yaml
+++ b/colplus-ws/src/main/resources/config.yaml
@@ -14,10 +14,11 @@ db:
   user: ${db.user}
   password: ${db.password}
 auth:
-  gbifApi: "${gbif.api}"
-  gbifAppkey: ${gbif.appkey}
-  gbifSecret: "${gbif.secret}"
-  signingKey: 3254e6rftgbzg6tz7
+  type: gbif
+  api: "${gbif.api}"
+  appkey: ${gbif.appkey}
+  secret: "${gbif.secret}"
+jwtKey: 3254e6rftgbzg6tz7
 es:
   # comma-separated strings of hosts and ports (numbers must match)
   hosts: ${es.hosts}
