--- a/colplus-admin/pom.xml
+++ b/colplus-admin/pom.xml
@@ -166,6 +166,10 @@
 
 		<!-- other -->
 		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.hashids</groupId>
 			<artifactId>hashids</artifactId>
 		</dependency>
