Fix EmlParser to extract correct title. Implement basics of assembly sector sync

--- a/colplus-admin/src/test/resources/coldp/0/metadata.yaml
+++ b/colplus-admin/src/test/resources/coldp/0/metadata.yaml
@@ -29,7 +29,7 @@ authorsAndEditors:
 # Any commons license, but preferrably CC0, CC-BY or CC-BY-NC
 license: CC-BY-NC
 
-# version name of this copy
+# version name of this copyTaxon
 version: ver. (06/2018)
 
 # release date of this version in ISO YYYY-MM-DD
