--- a/colplus-dao/pom.xml
+++ b/colplus-dao/pom.xml
@@ -120,6 +120,10 @@
 			<groupId>org.gbif</groupId>
 			<artifactId>dwc-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.java-diff-utils</groupId>
+			<artifactId>java-diff-utils</artifactId>
+		</dependency>
 
 		<!-- Elasticsearch / Lucene -->
 		<dependency>
