--- a/colplus-admin/src/test/resources/coldp/0/metadata.yaml
+++ b/colplus-admin/src/test/resources/coldp/0/metadata.yaml
@@ -1,5 +1,6 @@
 title: The full dataset title
-description: | 
+alias: shortname
+description: |
     An abstract about the content of this dataset.
     This can be as many paragraphs as you like in literal style YAML.
 
@@ -38,8 +39,14 @@ released: 2018-06-01
 # link to a website for the dataset if online
 website: https://www.fishbase.org
 
+group: english group name
 # URL to large logo image
-logo: https://www.fishbase.de/images/gifs/fblogo_new.gif 
-
+logo: https://www.fishbase.de/images/gifs/fblogo_new.gif
+code: botanical
+confidence: 4
+completeness: 32
 # how to cite the dataset
 citation: Froese R. & Pauly D. (eds) (2018). FishBase (version 06/2018).
+notes: |
+  my personal,
+  very long notes
