--- a/colplus-dao/pom.xml
+++ b/colplus-dao/pom.xml
@@ -37,6 +37,10 @@
 			<groupId>org.col</groupId>
 			<artifactId>colplus-common</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.col</groupId>
+			<artifactId>colplus-parser</artifactId>
+		</dependency>
 
 		<!-- mybatis / DB -->
 		<dependency>
