Use small TaxonCount class with fastutils intintmap, update sector counts on parent change

--- a/colplus-api/pom.xml
+++ b/colplus-api/pom.xml
@@ -70,6 +70,10 @@
 
         <!-- other -->
         <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
