Wire up duplicate resource

--- a/colplus-ws/src/main/resources/config.yaml
+++ b/colplus-ws/src/main/resources/config.yaml
@@ -40,3 +40,5 @@ img:
   repo: ${img.repo}
 cors:
   headers: "Authorization, Content-Type, Accept-Language, X-Requested-With"
+namesIndexFile: /tmp/colplus/nidx
+textTreeRepo: /tmp/colplus/trees
