--- a/colplus-dao/pom.xml
+++ b/colplus-dao/pom.xml
@@ -28,6 +28,15 @@
 	</build>
 
 	<dependencies>
+		<!-- reactor -->
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+			<version>3.2.8.RELEASE</version>
+		</dependency>
+
+
+
 		<!-- CoL & GBIF -->
 		<dependency>
 			<groupId>org.col</groupId>
