Better author normalization and init db fix. PgCopyUtils accepts now calculated fields

--- a/colplus-dao/pom.xml
+++ b/colplus-dao/pom.xml
@@ -63,6 +63,10 @@
 
 		<!-- other -->
 		<dependency>
+			<groupId>com.univocity</groupId>
+			<artifactId>univocity-parsers</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.imgscalr</groupId>
 			<artifactId>imgscalr-lib</artifactId>
 		</dependency>
