--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <commons-collections4.version>4.3</commons-collections4.version>
         <commons-compress.version>1.18</commons-compress.version>
         <commons-io.version>2.6</commons-io.version>
-        <dropwizard.version>1.3.8</dropwizard.version>
+        <dropwizard.version>1.3.12</dropwizard.version>
         <dwc-api.version>1.21</dwc-api.version>
         <elasticsearch.version>6.5.1</elasticsearch.version>
         <embedded-elasticsearch.version>2.8.0</embedded-elasticsearch.version>
@@ -94,6 +94,7 @@
         <maven-shade-plugin.version>3.0.0</maven-shade-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
+        <maven-git-commit-id-plugin.version>3.0.0</maven-git-commit-id-plugin.version>
         <versions-maven-plugin.version>2.4</versions-maven-plugin.version>
 
         <!-- default maven properties to define the postgres server for running tests.
@@ -563,6 +564,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>${maven-clean-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>pl.project13.maven</groupId>
+                    <artifactId>git-commit-id-plugin</artifactId>
+                    <version>${maven-git-commit-id-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
