--- a/colplus-parser/src/main/resources/fuzzy-date.properties
+++ b/colplus-parser/src/main/resources/fuzzy-date.properties
@@ -30,15 +30,17 @@ LocalDateTime.1.pattern=uuuu/M/d HH:mm[:ss]
 LocalDateTime.2.name=ISO_LOCAL_DATE_TIME
 LocalDateTime.3.pattern=uuuuMMddHHmmss
 
-LocalDate.0.pattern=uuuu-M-d
-LocalDate.1.pattern=uuuu/M/d
-LocalDate.2.pattern=uuuu M d
-LocalDate.3.pattern=uuuu-MMM-d
-LocalDate.4.pattern=uuuu/MMM/d
-LocalDate.5.pattern=uuuu MMM d
-LocalDate.6.pattern=uuuu年M月d日
-LocalDate.7.name=ISO_LOCAL_DATE
-LocalDate.8.name=BASIC_ISO_DATE
+LocalDate.0.pattern=d-MMM-uuuu
+LocalDate.1.pattern=uuuu-M-d
+LocalDate.2.pattern=uuuu/M/d
+LocalDate.3.pattern=uuuu M d
+LocalDate.4.pattern=uuuu-MMM-d
+LocalDate.5.pattern=uuuu/MMM/d
+LocalDate.6.pattern=uuuu MMM d
+LocalDate.7.pattern=uuuu年M月d日
+LocalDate.8.name=ISO_LOCAL_DATE
+LocalDate.9.name=BASIC_ISO_DATE
+LocalDate.10.pattern=uuuu M d
 
 YearMonth.0.pattern=uuuu-M
 YearMonth.1.pattern=uuuu/M
