Fix tests and move transliteration of common names from importer to sync copy

--- a/colplus-dao/pom.xml
+++ b/colplus-dao/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>mybatis</artifactId>
 		</dependency>
 
+		<!-- unicode, transliterations -->
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+		</dependency>
+
 		<!-- other -->
 		<dependency>
 			<groupId>com.univocity</groupId>
