--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,11 @@
     <repositories>
         <repository>
             <id>gbif-all</id>
-            <url>http://repository.gbif.org/content/groups/gbif</url>
+            <url>http://repository.gbif.org/repository/gbif</url>
+        </repository>
+        <repository>
+            <id>gbif-thirdparty</id>
+            <url>http://repository.gbif.org/repository/thirdparty</url>
         </repository>
     </repositories>
 
