Fix duplicate mapper to correctly link decisions from the same dataset only

--- a/colplus-ws/src/main/resources/config.yaml
+++ b/colplus-ws/src/main/resources/config.yaml
@@ -4,6 +4,7 @@ logging:
     "org.col": DEBUG
     "org.apache.http": WARN
     "org.eclipse.jetty.servlet": WARN
+    "org.col.db.mapper": DEBUG
   appenders:
     - type: console
 db:
