--- a/pom.xml
+++ b/pom.xml
@@ -50,39 +50,39 @@
         <commons-collections4.version>4.3</commons-collections4.version>
         <commons-compress.version>1.18</commons-compress.version>
         <commons-io.version>2.6</commons-io.version>
-        <dropwizard.version>1.3.12</dropwizard.version>
-        <dwc-api.version>1.21</dwc-api.version>
+        <dropwizard.version>1.3.14</dropwizard.version>
+        <dwc-api.version>1.22</dwc-api.version>
         <elasticsearch.version>6.5.1</elasticsearch.version>
         <embedded-elasticsearch.version>2.8.0</embedded-elasticsearch.version>
-        <fastutil.version>8.2.1</fastutil.version>
-        <gbif-api.version>0.68</gbif-api.version>
-        <gbif-parser.version>0.35</gbif-parser.version>
+        <fastutil.version>8.3.0</fastutil.version>
+        <gbif-api.version>0.83</gbif-api.version>
+        <gbif-parser.version>0.42</gbif-parser.version>
         <hashids.version>1.0.3</hashids.version>
-        <hikaricp.version>3.2.0</hikaricp.version>
+        <hikaricp.version>3.3.1</hikaricp.version>
         <hk2.version>2.5.0-b32</hk2.version>
-        <icu4j.version>63.1</icu4j.version>
+        <icu4j.version>64.2</icu4j.version>
         <java-diff-utils.version>4.0</java-diff-utils.version>
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
-        <javers.version>3.10.0</javers.version>
-        <jjwt.version>0.7.0</jjwt.version>
+        <javers.version>5.6.3</javers.version>
+        <jjwt.version>0.9.1</jjwt.version>
         <junit.version>4.12</junit.version>
         <kryo-serializers.version>0.42</kryo-serializers.version>
         <kryo.version>4.0.1</kryo.version>
         <logstash-logback.version>5.1</logstash-logback.version>
         <mapdb.version>3.0.5</mapdb.version>
         <mockito.version>2.12.0</mockito.version>
-        <mybatis.version>3.4.6</mybatis.version>
-        <name-parser.version>3.1.7-SNAPSHOT</name-parser.version>
+        <mybatis.version>3.5.2</mybatis.version>
+        <name-parser.version>3.2.3-SNAPSHOT</name-parser.version>
         <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
-        <neo4j.version>3.4.3</neo4j.version>
+        <neo4j.version>3.4.14</neo4j.version>
         <postgresql.version>42.2.5</postgresql.version>
         <stax2.version>3.1.4</stax2.version>
-        <tika.version>1.20</tika.version>
+        <tika.version>1.22</tika.version>
         <twelvemonkeys.version>3.4.1</twelvemonkeys.version>
         <validation-api.version>2.0.0.Final</validation-api.version>
         <woodstox.version>4.4.1</woodstox.version>
         <imgscalr.version>4.2</imgscalr.version>
-        <univocity-parsers.version>2.7.6</univocity-parsers.version>
+        <univocity-parsers.version>2.8.3</univocity-parsers.version>
         <!-- Maven plugin versions. Check for available updates: mvn versions:display-plugin-updates -->
         <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
         <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
@@ -404,11 +404,6 @@
             </dependency>
             <dependency>
                 <groupId>org.neo4j</groupId>
-                <artifactId>neo4j-shell</artifactId>
-                <version>${neo4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.neo4j</groupId>
                 <artifactId>neo4j-slf4j</artifactId>
                 <version>${neo4j.version}</version>
             </dependency>
@@ -434,6 +429,13 @@
                 <groupId>de.javakaffee</groupId>
                 <artifactId>kryo-serializers</artifactId>
                 <version>${kryo-serializers.version}</version>
+            </dependency>
+
+            <!-- elastic -->
+            <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-client</artifactId>
+                <version>${elasticsearch.version}</version>
             </dependency>
 
             <!-- unicode, transliterations
