--- a/colplus-ws/src/main/resources/config.yaml
+++ b/colplus-ws/src/main/resources/config.yaml
@@ -36,7 +36,7 @@ auth:
   api: "${gbif.api}"
   appkey: ${gbif.appkey}
   secret: "${gbif.secret}"
-jwtKey: 3254e6rftgbzg6tz7
+jwtKey: 3254e6rftgbzg6tz73254e6rftgbzg6tz73254e6rftgbzg6tz7
 img:
   repo: ${img.repo}
 cors:
