--- a/colplus-ws/src/test/resources/config-test.yaml
+++ b/colplus-ws/src/test/resources/config-test.yaml
@@ -50,6 +50,6 @@ auth:
     - username: admin
       password: 12345678
       role: ADMIN
-jwtKey: 3254e6rftgbzg6tz7
+jwtKey: 3254e6rftgbzg6tz73254e6rftgbzg6tz73254e6rftgbzg6tz7
 img:
   repo: ${img.repo}
