--- a/colplus-dao/src/test/resources/es-test.yaml
+++ b/colplus-dao/src/test/resources/es-test.yaml
@@ -1,6 +1,6 @@
 hosts: ${es.hosts}
 ports: ${es.ports}
 nameUsage:
-  modelClass: org.col.es.name.NameUsageDocument
+  modelClass: org.col.es.model.NameUsageDocument
   numShards: 1
   numReplicas: 0
