Test disabling of ssl validation. Manually manage httpcore version as we have conflicts between DW and ES. Autodetect proxied csv delimiters

--- a/colplus-ws/src/test/resources/config-test.yaml
+++ b/colplus-ws/src/test/resources/config-test.yaml
@@ -33,6 +33,9 @@ client:
   maxConnectionsPerRoute: 16
   keepAlive: 0ms
   retries: 1
+  tls:
+    verifyHostname: false
+    trustSelfSignedCertificates: true
 es:
   hosts:
   ports: 9200
