--- a/colplus-ws/pom.xml
+++ b/colplus-ws/pom.xml
@@ -183,6 +183,17 @@
             <artifactId>icu4j</artifactId>
         </dependency>
 
+        <!-- templating -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>no.api.freemarker</groupId>
+            <artifactId>freemarker-java8</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
         <!-- Jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
