--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,8 @@
         <name-parser.version>3.4.2-SNAPSHOT</name-parser.version>
         <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
         <neo4j.version>3.4.14</neo4j.version>
-        <postgresql.version>42.2.5</postgresql.version>
+        <postgresql.version>42.2.8</postgresql.version>
+        <pgjdbc-ng.version>0.8.3</pgjdbc-ng.version>
         <stax2.version>3.1.4</stax2.version>
         <tika.version>1.22</tika.version>
         <twelvemonkeys.version>3.4.1</twelvemonkeys.version>
@@ -383,6 +384,11 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.impossibl.pgjdbc-ng</groupId>
+                <artifactId>pgjdbc-ng</artifactId>
+                <version>${pgjdbc-ng}</version>
             </dependency>
             <dependency>
                 <groupId>com.zaxxer</groupId>
