--- a/colplus-parser/pom.xml
+++ b/colplus-parser/pom.xml
@@ -25,7 +25,11 @@
         </dependency>
         <dependency>
             <groupId>org.gbif</groupId>
-            <artifactId>gbif-parsers</artifactId>
+            <artifactId>name-parser-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.gbif</groupId>
+            <artifactId>name-parser</artifactId>
         </dependency>
 
         <!-- other -->
