--- a/colplus-api/pom.xml
+++ b/colplus-api/pom.xml
@@ -113,6 +113,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-afterburner</artifactId>
+        </dependency>
 
         <!-- commons -->
         <dependency>
