Explicitly depend on bouncycastle, see #573

--- a/colplus-ws/pom.xml
+++ b/colplus-ws/pom.xml
@@ -128,6 +128,11 @@
             <groupId>org.neo4j</groupId>
             <artifactId>graph-algorithms-algo</artifactId>
         </dependency>
+        <!-- somehow missing from neo4j deps on java 11: https://github.com/Sp2000/colplus-backend/issues/573 -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+        </dependency>
 
         <!-- mapdb & kryo -->
         <!-- we use kryo to serialize data into binary which is > 10 times faster than jackson even with smile -->
