--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <commons-collections4.version>4.3</commons-collections4.version>
         <commons-compress.version>1.19</commons-compress.version>
         <commons-io.version>2.6</commons-io.version>
-        <dropwizard.version>2.0.0-rc13</dropwizard.version>
+        <dropwizard.version>2.0.0</dropwizard.version>
         <dwc-api.version>1.23</dwc-api.version>
         <elasticsearch.version>6.5.1</elasticsearch.version>
         <embedded-elasticsearch.version>2.8.0</embedded-elasticsearch.version>
