--- a/colplus-ws/src/main/resources/config.yaml
+++ b/colplus-ws/src/main/resources/config.yaml
@@ -1,7 +1,7 @@
 logging:
   level: INFO
   loggers:
-    "org.col": DEBUG
+    "life.catalogue": DEBUG
     "org.apache.http": WARN
     "org.eclipse.jetty.servlet": WARN
     "life.catalogue.db.mapper": DEBUG
