--- a/colplus-ws/src/test/resources/config-test.yaml
+++ b/colplus-ws/src/test/resources/config-test.yaml
@@ -8,7 +8,7 @@ server:
 logging:
   level: INFO
   loggers:
-    "org.col": INFO
+    "life.catalogue": INFO
   appenders:
     - type: console
 db:
